Выравнивание по пикселю шапки блока популярных товаров

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
     </header>
     <main>
-      <section class="service-presentation">
+      <section class="service-presentation service-presentation--page-context">
         <h2 class="visually-hidden">Презентация услуг интернет-магазина</h2>
         <div class="centering-block centering-block--presentation-block">
           <section class="presentation-category service-presentation__presentation-category service-presentation__presentation-category--material-category service-presentation__new-products">
