--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <section class="service-presentation service-presentation--page-context">
         <h2 class="visually-hidden">Презентация услуг интернет-магазина</h2>
         <div class="centering-block centering-block--presentation-block">
-          <section class="presentation-category service-presentation__presentation-category service-presentation__presentation-category--material-category service-presentation__new-products">
+          <section class="presentation-category service-presentation__presentation-category service-presentation__presentation-category--material-category new-product">
             <h3 class="presentation-category__title presentation-category__title--material-title">Материалы</h3>
             <a class="presentation-category__link presentation-category__link--material-link" href="#">На любой вкус</a>
           </section>
@@ -146,29 +146,35 @@
         </header>
         <ul class="top-products__list">
           <li class="top-products__item">
-            <article class="store-product top-products__store-product">
+            <article class="store-product top-products__store-product top-products__store-product--bosch-bfg-9000">
               <h3 class="store-product__title">Перфоратор BOSCH BFG 9000</h3>
-              <img src="img/perforator-1.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 9000">
+              <img class="store-product__image" src="img/perforator-1.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 9000">
               <p class="store-product__old-price">32500 Р.</p>
-              <p class="store-product__current-price">25500 Р.</p>
+              <p class="store-product__current-price button">25500 Р.</p>
             </article>
-            <article class="store-product top-products__store-product">
+          </li>
+          <li class="top-products__item">
+            <article class="store-product top-products__store-product top-products__store-product--bosch-bfg-3000">
               <h3 class="store-product__title">Перфоратор BOSCH BFG 3000</h3>
-              <img src="img/perforator-2.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
+              <img class="store-product__image" src="img/perforator-2.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
               <p class="store-product__old-price">22500 Р.</p>
-              <p class="store-product__current-price">15500 Р.</p>
+              <p class="store-product__current-price button">15500 Р.</p>
             </article>
-            <article class="store-product top-products__store-product">
+          </li>
+          <li class="top-products__item">
+            <article class="store-product top-products__store-product top-products__store-product--bosch-bfg-6000">
               <h3 class="store-product__title">Перфоратор BOSCH BFG 6000</h3>
-              <img src="img/perforator-3.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 6000">
+              <img class="store-product__image" src="img/perforator-3.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 6000">
               <p class="store-product__old-price">30500 Р.</p>
-              <p class="store-product__current-price">25500 Р.</p>
+              <p class="store-product__current-price button">25500 Р.</p>
             </article>
-            <article class="store-product top-products__store-product">
+          </li>
+          <li class="top-products__item">
+            <article class="store-product top-products__store-product top-products__store-product--bosch-bfg-2000 new-product">
               <h3 class="store-product__title">Перфоратор BOSCH BFG 2000</h3>
-              <img src="img/perforator-4.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 6000">
-              <p class="store-product__old-price"></p>
-              <p class="store-product__current-price">12500 Р.</p>
+              <img class="store-product__image" src="img/perforator-4.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 6000">
+              <p class="store-product__old-price store-product__old-price--none"></p>
+              <p class="store-product__current-price button">12500 Р.</p>
             </article>
           </li>
         </ul>
