Выравнивание по пикселю блока производителей

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           </div>
         </div>
       </section>
-      <section class="top-products centering-block">
+      <section class="top-products top-products--page-context centering-block">
         <header class="top-products__head-block">
           <h2 class="top-products__title">Популярные товары:</h2>
           <a class="top-products__link button" href="#">Все популярные товары</a>
