Выравнивание по пикселю блока с сервисами магазина

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           </li>
         </ul>
       </section>
-      <section class="top-makers centering-block">
+      <section class="top-makers top-makers--page-context centering-block">
         <header class="top-makers__head-block">
           <h2 class="top-makers__title">Популярные Производители:</h2>
           <a class="top-makers__link button" href="#">Все производители</a>
@@ -236,7 +236,7 @@
           </header>
           <div class="services__main-content">
             <ul class="services__list">
-              <li class="services__item">Доставка</li>
+              <li class="services__item services__item--current">Доставка</li>
               <li class="services__item">Гарантия</li>
               <li class="services__item">Кредит</li>
             </ul>
@@ -244,24 +244,26 @@
               <div class="services__description-item services__description-item--delivery">
                 <h3 class="services__item-title">Доставка</h3>
                 <p class="services__item-description">
-                  Мы с удовольствием доставим ваш товар прямо
-                  к вашему подъезду совершенно бесплатно!
-                  Ведь мы неплохо заработаем,
+                  Мы с удовольствием доставим ваш товар прямо<br>
+                  к вашему подъезду совершенно бесплатно!<br>
+                  Ведь мы неплохо заработаем,<br>
                   поднимая его на ваш этаж!
                 </p>
               </div>
               <div class="services__description-item services__description-item--guarantee">
                 <h3 class="services__item-title">Гарантия</h3>
                 <p class="services__item-description">
-                  Если купленный у нас товар поломается или заискрит,
-                  а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.
+                  Если купленный у нас товар поломается или заискрит,<br>
+                  а также в случае пожара, спровоцированного его возгаранием,<br>
+                  вы всегда можете быть уверены в нашей гарантии. Мы обменяем<br>
+                  сгоревший товар на новый.<br>
                   Дом уж восстановите как-нибудь сами.
                 </p>
               </div>
               <div class="services__description-item services__description-item--credit">
                 <h3 class="services__item-title">Кредит</h3>
                 <p class="services__item-description">
-                  Залезть в долговую яму стало проще!
+                  Залезть в долговую яму стало проще!<br>
                   Кредитные консультанты придут вам на помощь.
                 </p>
                 <a class="services__list-description--credit-link button" href="#">Отправить заявку</a>
