--- a/index.html
+++ b/index.html
@@ -276,10 +276,10 @@
         <h2 class="visually-hidden">Пару слов о нас</h2>
         <section class="company-description about-shop__company-description">
           <h3 class="company-description__title">Компания «Техномарт»</h3>
-          <p class="company-description__shop-work">
+          <p class="company-description__shop-work company-description__shop-work--top-paragraph">
             Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
           </p>
-          <p class="company-description__shop-work">
+          <p class="company-description__shop-work company-description__shop-work--bottom-paragraph">
               Мы можем доставить ваш товар в самые отдаленные точки России!
               Техномарт работает со многими транспортными компаниями:
           </p>
