Выравнивание по пикселю подвала главной страницы

--- a/index.html
+++ b/index.html
@@ -364,13 +364,19 @@
           </p>
           <ul class="main-footer__social-list">
             <li class="main-footer__social-item">
-              <a class="main-footer__social-link main-footer__social-link--vk" href="#">Наша группа в контакте</a>
+              <a class="main-footer__social-link main-footer__social-link--vk" href="#">
+                <span class="visually-hidden">Наша группа в контакте</span>
+              </a>
             </li>
             <li class="main-footer__social-item">
-              <a class="main-footer__social-link main-footer__social-link--facebook" href="#">Наша группа в фейсбуке</a>
+              <a class="main-footer__social-link main-footer__social-link--facebook" href="#">
+                <span class="visually-hidden">Наша группа в фейсбуке</span>
+              </a>
             </li>
             <li class="main-footer__social-item">
-              <a class="main-footer__social-link main-footer__social-link--instagram" href="#">Наша группа в инстаграме</a>
+              <a class="main-footer__social-link main-footer__social-link--instagram" href="#">
+                <span class="visually-hidden">Наша группа в инстаграме</span>
+              </a>
             </li>
           </ul>
           <div class="main-footer__developers">
