--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
             <article class="store-product top-products__store-product top-products__store-product--bosch-bfg-9000">
               <h3 class="store-product__title">Перфоратор BOSCH BFG 9000</h3>
               <img class="store-product__image" src="img/perforator-1.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 9000">
+              <div class="store-product__product-actions">
+                <button class="store-product__product-action store-product__product-action--add-product" type="button">Купить</button>
+                <button class="store-product__product-action store-product__product-action--add-bookmark" type="button">В закладки</button>
+              </div>
               <p class="store-product__old-price">32500 Р.</p>
               <p class="store-product__current-price button">25500 Р.</p>
             </article>
@@ -157,6 +161,10 @@
             <article class="store-product top-products__store-product top-products__store-product--bosch-bfg-3000">
               <h3 class="store-product__title">Перфоратор BOSCH BFG 3000</h3>
               <img class="store-product__image" src="img/perforator-2.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
+              <div class="store-product__product-actions">
+                <button class="store-product__product-action store-product__product-action--add-product" type="button">Купить</button>
+                <button class="store-product__product-action store-product__product-action--add-bookmark" type="button">В закладки</button>
+              </div>
               <p class="store-product__old-price">22500 Р.</p>
               <p class="store-product__current-price button">15500 Р.</p>
             </article>
@@ -165,6 +173,10 @@
             <article class="store-product top-products__store-product top-products__store-product--bosch-bfg-6000">
               <h3 class="store-product__title">Перфоратор BOSCH BFG 6000</h3>
               <img class="store-product__image" src="img/perforator-3.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 6000">
+              <div class="store-product__product-actions">
+                <button class="store-product__product-action store-product__product-action--add-product" type="button">Купить</button>
+                <button class="store-product__product-action store-product__product-action--add-bookmark" type="button">В закладки</button>
+              </div>
               <p class="store-product__old-price">30500 Р.</p>
               <p class="store-product__current-price button">25500 Р.</p>
             </article>
@@ -173,6 +185,10 @@
             <article class="store-product top-products__store-product top-products__store-product--bosch-bfg-2000 new-product">
               <h3 class="store-product__title">Перфоратор BOSCH BFG 2000</h3>
               <img class="store-product__image" src="img/perforator-4.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 6000">
+              <div class="store-product__product-actions">
+                <button class="store-product__product-action store-product__product-action--add-product" type="button">Купить</button>
+                <button class="store-product__product-action store-product__product-action--add-bookmark" type="button">В закладки</button>
+              </div>
               <p class="store-product__old-price store-product__old-price--none"></p>
               <p class="store-product__current-price button">12500 Р.</p>
             </article>
@@ -186,42 +202,42 @@
         </header>
         <ul class="top-makers__list">
           <li class="top-makers__item">
-            <a class="top-makers__item-link">
+            <a class="top-makers__item-link" href="#">
               <img src="img/manufacturer-bosch.png" width="188" height="77" alt="Производитель Bosch">
             </a>
           </li>
           <li class="top-makers__item">
-            <a class="top-makers__item-link">
+            <a class="top-makers__item-link" href="#">
               <img src="img/manufacturer-makita.png" width="188" height="77" alt="Производитель Makita">
             </a>
           </li>
           <li class="top-makers__item">
-            <a class="top-makers__item-link">
+            <a class="top-makers__item-link" href="#">
               <img src="img/manufacturer-dewalt.png" width="188" height="77" alt="Производитель DeWalt">
             </a>
           </li>
           <li class="top-makers__item">
-            <a class="top-makers__item-link">
+            <a class="top-makers__item-link" href="#">
               <img src="img/manufacturer-interskol.png" width="188" height="77" alt="Производитель Интерскол">
             </a>
           </li>
           <li class="top-makers__item">
-            <a class="top-makers__item-link">
+            <a class="top-makers__item-link" href="#">
               <img src="img/manufacturer-hitachi.png" width="188" height="76" alt="Производитель Hitachi">
             </a>
           </li>
           <li class="top-makers__item">
-            <a class="top-makers__item-link">
+            <a class="top-makers__item-link" href="#">
               <img src="img/manufacturer-lg.png" width="188" height="76" alt="Производитель LG">
             </a>
           </li>
           <li class="top-makers__item">
-            <a class="top-makers__item-link">
+            <a class="top-makers__item-link" href="#">
               <img src="img/manufacturer-aeg.png" width="188" height="76" alt="Производитель AEG Power Solutions">
             </a>
           </li>
           <li class="top-makers__item">
-            <a class="top-makers__item-link">
+            <a class="top-makers__item-link" href="#">
               <img src="img/manufacturer-metabo.png" width="188" height="76" alt="Производитель Metabo">
             </a>
           </li>
