--- a/index.html
+++ b/index.html
@@ -17,11 +17,35 @@
             <p class="header-feedback__adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
           <ul class="main-header__user-navigation">
-            <li class="main-header__user-navigation-item">
-              <a class="main-header__user-navigation-link main-header__user-navigation-link--enter" href="#">Войти</a>
+            <li class="main-header__unregistered-user">
+              <ul class="main-header__unregistered-user-list">
+                <li class="main-header__user-navigation-item">
+                  <a class="main-header__user-navigation-link main-header__user-navigation-link--enter" href="#">Войти</a>
+                </li>
+                <li class="main-header__user-navigation-item">
+                  <a class="main-header__user-navigation-link main-header__user-navigation-link--user-registration" href="#">Регистрация</a>
+                </li>
+              </ul>
             </li>
-            <li class="main-header__user-navigation-item">
-              <a class="main-header__user-navigation-link main-header__user-navigation-link--user-registration" href="#">Регистрация</a>
+            <li class="main-header__logged-user">
+              <ul class="main-header__logged-user-list">
+                <li class="main-header__user-navigation-item">
+                  <a class="main-header__user-login" href="#">Дима Кувалда</a>
+                </li>
+                <li class="main-header__user-navigation-item">
+                  <a class="main-header__profile-exit" href="#">
+                    <span class="visually-hidden">Выход из профиля</span>
+                  </a>
+                </li>
+              </ul>
+              <ul class="main-header__user-profile-list">
+                <li class="main-header__user-profile-item">
+                  <a class="main-header__user-profile-link" href="#">Мои заказы</a>
+                </li>
+                <li class="main-header__user-profile-item">
+                  <a class="main-header__user-profile-link" href="#">Личный кабинет</a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -101,7 +125,7 @@
               <div class="product-slider__perforators-slide">
                 <h4 class="product-slider__slide-title">Перфораторы</h4>
                 <p class="product-slider__slide-slogan">Настоящие мужские игрушки</p>
-                <img class="product-slider__slide-image"src="img/perforator-slide.jpg" width="620" height="226" alt="Изображение строителя с перфоратором">
+                <img class="product-slider__slide-image" src="img/perforator-slide.jpg" width="620" height="226" alt="Изображение строителя с перфоратором">
               </div>
               <div class="product-slider__drills-slide">
                 <h4 class="product-slider__slide-title">Дрели</h4>
