Выравнивание по пикселю шапки основного содержания каталога

--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="catalog-page">
-      <header class="main-header main-header--page-context">
+      <header class="main-header">
         <div class="main-header__middle-column">
           <div class="centering-block centering-block--header-middle">
             <h1 class="main-header__page-title">Интернет-магазин строительных материалов<br> и инструментов для ремонта</h1>
