--- a/catalog.html
+++ b/catalog.html
@@ -122,8 +122,8 @@
             <span class="setup-header__title">Фильтр:</span>
           </div>
           <form class="setup-product">
-            <fieldset class="setup-product__range-block">
-              <legend class="setup-product__group-title">Цена:</legend>
+            <fieldset class="setup-product__group-block setup-product__group-block-range-block">
+              <legend class="setup-product__group-title setup-product__group-title--price">Цена:</legend>
               <div class="setup-product__range-value-container">
                 <div class="setup-product__range-settings-line">
                   <span class="visually-hidden">
@@ -143,42 +143,42 @@
                   </div>
                 </div>
               </div>
-              <div class="setup-product__range-value-container">
-                <div class="setup-product__range-min-value">
-                  0
+              <div class="setup-product__range-price-display">
+                <div class="setup-product__range-value setup-product__range-value--min-value">
+                  <span class="setup-product__range-output setup-product__range-output--min-value">0</span>
                 </div>
-                <div class="setup-product__range-max-value">
-                  30000
+                <div class="setup-product__range-value setup-product__range-value-max-value">
+                  <span class="setup-product__range-output setup-product__range-output--max-value">30000</span>
                 </div>
               </div>
             </fieldset>
-            <fieldset class="setup-product__makers-block">
-              <legend class="setup-product__group-title">Производители:</legend>
+            <fieldset class="setup-product__group-block setup-product__group-block--makers-block">
+              <legend class="setup-product__group-title setup-product__group-title--makers">Производители:</legend>
               <ul class="setup-product__makers-list">
-                <li class="setup-product__makers-item">
+                <li class="setup-product__makers-item setup-product__makers-item--bosch-maker">
                   <label class="setup-product__label-field" for="bosch">Bosch</label>
                   <input class="setup-product__makers-field" type="checkbox" id="bosch" checked>
                 </li>
-                <li class="setup-product__makers-item">
+                <li class="setup-product__makers-item setup-product__makers-item--interskol-maker">
                   <label class="setup-product__label-field" for="интерскол">Интерскол</label>
                   <input class="setup-product__makers-field" type="checkbox" id="интерскол">
                 </li>
-                <li class="setup-product__makers-item">
+                <li class="setup-product__makers-item setup-product__makers-item--makita-maker">
                   <label class="setup-product__label-field" for="makita">Makita</label>
                   <input class="setup-product__makers-field" type="checkbox" id="makita" checked>
                 </li>
-                <li class="setup-product__makers-item">
-                  <label class="setup-product__label-field" for="makita">Dewalt</label>
+                <li class="setup-product__makers-item setup-product__makers-item--dewalt-maker">
+                  <label class="setup-product__label-field" for="dewalt">Dewalt</label>
                   <input class="setup-product__makers-field" type="checkbox" id="dewalt">
                 </li>
-                <li class="setup-product__makers-item">
+                <li class="setup-product__makers-item setup-product__makers-item--hitachi-maker">
                   <label class="setup-product__label-field" for="hitachi">Hitachi</label>
                   <input class="setup-product__makers-field" type="checkbox" id="hitachi">
                 </li>
               </ul>
             </fieldset>
-            <fieldset class="setup-product__charge-type">
-              <legend class="setup-product__group-title">Питание:</legend>
+            <fieldset class="setup-product__group-block setup-product__group-block--charge-type">
+              <legend class="setup-product__group-title setup-product__group-title--charge">Питание:</legend>
               <ul class="setup-product__charge-list">
                 <li class="setup-product__charge-item">
                   <label class="setup-product__label-field" for="storage-battery">Аккумуляторные</label>
@@ -190,7 +190,7 @@
                 </li>
               </ul>
             </fieldset>
-            <button class="setup-product__button-show">Показать</button>
+            <button class="setup-product__button-show" type="submit">Показать</button>
           </form>
         </div>
         <section class="sort-block">
